--- a/pages/shop/shopcart.wxml
+++ b/pages/shop/shopcart.wxml
@@ -1,13 +1,10 @@
 <!--index.wxml-->
 <view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
+  <view class="section">
+    <input bindinput="bindphone" type="number" placeholder="请输入手机号" />
   </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
+  <view class="section">
+    <input bindinput="bindpwd" password type="text" placeholder="请输入密码" />
   </view>
+  <button bindtap="adduser">注册</button>
 </view>
