--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,13 +1,9 @@
 <!--index.wxml-->
-<view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
-  </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
+<view>
+  <button>距离</button>
+  <button>人气</button>
+  <button>评分</button>
+  <view wx:for="{{array}}">
+  <view>测试</view>
   </view>
 </view>
