--- a/pages/shop/shopcart.wxml
+++ b/pages/shop/shopcart.wxml
@@ -7,4 +7,7 @@
     <input bindinput="bindpwd" password type="text" placeholder="请输入密码" />
   </view>
   <button bindtap="adduser">注册</button>
+  <view wx:for="{{array}}">
+    {{index}}: {{item.message}}
+  </view>
 </view>
