--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -4,7 +4,15 @@
   flex-direction: column;
   align-items: center;
 }
-
+.flex-wrp{
+  margin-top: 60rpx;
+  display:flex;
+}
+.flex-item{
+  width: 300rpx;
+  height: 50rpx;
+  font-size: 26rpx;
+}
 .userinfo-avatar {
   width: 128rpx;
   height: 128rpx;
