--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -3,18 +3,24 @@
   <swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
     <block wx:for="{{imgUrls}}">
       <swiper-item>
-        <image src="{{item}}" width="100%" height="150" />
+        <image src="{{item}}" style="width:100%;height:150px;" />
       </swiper-item>
     </block>
   </swiper>
-  <view class="flex-wrp">
-    <button class="flex-item">距离</button>
-    <button class="flex-item">人气</button>
-    <button class="flex-item">评分</button>
+  <view class="tapNav">
+    <view class="{{tabArr.tabCurrentIndex==0?'active':''}}" data-index="0" bindtap="veHandle">距离</view>
+    <view class="{{tabArr.tabCurrentIndex==1?'active':''}}" data-index="1" bindtap="veHandle">人气</view>
+    <view class="{{tabArr.tabCurrentIndex==2?'active':''}}" data-index="2" bindtap="veHandle">评分</view>
   </view>
   <view wx:for="{{array}}">
-    <view>测试标题</view>
-    <view> {{index}}: {{item.message}}</view>
-    <view>测试时间</view>
+    <view class="flex-wrp">
+      <image src="{{avatar}}" style="width:100px;height:100px;border-radius:50%;">
+      </image>
+      <view>
+        <view>{{item.name}}</view>
+        <view style="font-size:16px;height:30px;line-height:30px;"> {{item.message}}</view>
+        <view style="font-size:16px;height:30px;line-height:30px;">{{item.address}}</view>
+      </view>
+    </view>
   </view>
 </view>
