--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -3,8 +3,20 @@
   margin-top: 60rpx;
   display:flex;
 }
-.flex-item{
-  width: 300rpx;
-  height: 50rpx;
-  font-size: 26rpx;
+.tapNav {
+ display: flex;
+ flex-direction: row;
+}
+.tapNav view{
+ flex:1;
+ width:200rpx;
+ height:100rpx;
+ text-align: center;
+ line-height: 100rpx;
+ font-family: "微软雅黑";
+}
+/*选中样式*/
+.tapNav .active {
+ color:#09bb07;
+ border-bottom:4rpx solid mediumseagreen;
 }
